# Election-Api

./: .gitignore  README.md  README.org  data.json  main.py  pyproject.toml  requirements.txt  scraper.py
templates/: README.html  index.html  index.org
